--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 aiofiles==23.2.1
-aiogram==3.4.1
+aiogram
 aiohttp==3.9.3
 aioredis==2.0.1
 aiosignal==1.3.1
@@ -19,7 +19,7 @@ fluent.syntax==0.19.0
 fluentogram==1.1.6
 frozenlist==1.4.1
 graphql-core==3.2.3
-graphql_query==1.0.3
+graphql_query
 idna==3.6
 isHex==1.1.0
 Jinja2==3.1.3
@@ -41,7 +41,7 @@ setuptools==69.2.0
 six==1.16.0
 ton==0.26
 tonsdk==1.0.13
-TonTools==2.1.2
+TonTools
 tvm-valuetypes==0.0.12
 typing_extensions==4.11.0
 urllib3==2.2.1
